2003-01-02  Ben Elliston  <bje@redhat.com>

	* configure.in: Add iq2000-elf target.
	* configure: Regenerate.
	* config/tc-iq2000.c: New file.
	* config/tc-iq2000.h: Likewise.
	* po/gas.pot: Regenerate.

2003-01-02  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c: Update copyright years to include 2003.
	(mips_ip): Fix indentation of "+A", "+B", and "+C" handling.
	Additionally, clean up their code slightly and clean up their
	comments some more.

	* doc/c-mips.texi: Add MIPS32r2 to ".set mipsN" documentation.

2003-01-01  Daniel Jacobowitz  <drow@mvista.com>

	* doc/Makefile.am (as.1): Depend on "asconfig.texi gasver.texi
	$(CPU_DOCS)".
	* doc/Makefile.in: Regenerate.

2003-01-01  John David Anglin  <dave.anglin@nrc.ca>

        * config/obj-elf.c (special_sections): Work around HP's incorrect usage
        of .init and .fini sections for array initializers and finalizers.

2002-12-31  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (validate_mips_insn, mips_ip): Recognize
	the "+D" operand, which will be used only by the disassembler.

2002-12-30  Chris Demetriou  <cgd@broadcom.com>

	* configure.in: Recognize mipsisa32r2, mipsisa32r2el, and
	CPU variants.
	* configure: Regenerate.
	* config/tc-mips.c (ISA_HAS_DROR, ISA_HAS_ROR): New defines.
	(macro_build): Handle "K" operand.
	(macro2): Use ISA_HAS_DROR and ISA_HAS_ROR in the places where
	CPU_HAS_DROR and CPU_HAS_ROR are currently used.
	(mips_ip): New variable "lastpos", and implement "+A", "+B",
	and "+C" operands for MIPS32 Release 2 ins/ext instructions.
	Implement "K" operand for MIPS32 Release 2 rdhwr instruction.
	(validate_mips_insn): Implement "+" as a way to extend the
	allowed operands, and implement "K", "+A", "+B", and "+C"
	operands.
	(OPTION_MIPS32R2): New define.
	(md_longopts): Add entry for OPTION_MIPS32R2.
	(OPTION_ELF_BASE): Adjust to accomodate OPTIONS_MIPS32R2.
	(md_parse_option): Handle OPTION_MIPS32R2.
	(s_mipsset): Reimplement handling of ".set mipsN" options