@@ -1,3 +1,9 @@
+2003-01-07  DJ Delorie  <dj@redhat.com>
+
+	* config/tc-xstormy16.c (md_cgen_lookup_reloc): Adjust value based
+	on operand type.
+	(xstormy16_md_apply_fix3): Use adjustment.
+
 2003-01-02  Ben Elliston  <bje@redhat.com>
 
 	* configure.in: Add iq2000-elf target.
